--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "firebaseui": "^6.0.1",
+    "moment": "^2.29.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-firebase-hooks": "^5.0.3",
