--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "firebase-admin": "^10.0.2",
     "firebaseui": "^6.0.1",
     "moment": "^2.29.2",
+    "next-with-apollo": "^5.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-files-hooks": "^2.0.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "unstated-next": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
